src/components/Dialog/styles.module.css
.overlay {
	position: fixed;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: rgba(0, 0, 0, 0.5);
	z-index: 9999;
	display: flex;
	align-items: center;
	justify-content: center;
}

.box {
	padding: var(--spacing-5);
	background: var(--default-background-color);
	border-radius: var(--default-border-radius);
	box-shadow: var(--default-box-shadow);
	max-width: 80%;
	max-height: 90vh;
	overflow-y: auto;
}

@media (max-width: 42rem) {
	.box.full-screen-on-small-devices {
		max-width: 100vw;
		max-height: 100vh;
		width: 100vw;
		height: 100vh;
		border-radius: 0;
	}
}

